AC_INIT([BlockDagCoin], [0.1], [contact@blockdagcoin.com])
AC_CONFIG_SRCDIR([src/blockdagcoind.cpp])
AC_CONFIG_HEADERS([src/config/blockdagcoin-config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([build-aux/m4])

BLOCKDAGCOIN_DAEMON_NAME=blockdagcoind
BLOCKDAGCOIN_CLI_NAME=blockdagcoin-cli
BLOCKDAGCOIN_TX_NAME=blockdagcoin-tx

AC_CANONICAL_HOST
AM_INIT_AUTOMAKE([foreign subdir-objects])
LT_INIT

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P
